--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ nav ul li a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, #006d77, #8c26a5, #3d84ee, #2ecc71);
+  background: linear-gradient(135deg, #df83d6, #8c26a5, #3d84ee, #2ecc71);
   background-size: 400%;
   animation: gradientShift 20s ease infinite;
   z-index: -1;
@@ -523,3 +523,4 @@ footer {
     padding: 0.6rem 1rem;
   }
 }
+
